<resources>
    <string name="app_name">SampleDemo</string>
    <string name="intent">Intent使用</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="textview_msg">請選擇 :</string>
    <string name="textview_msg_yes">選擇 : yes</string>
    <string name="textview_msg_no">選擇 : no</string>
    <string name="fragment">Fragment使用</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="collapsing">Collapsing使用</string>
    <string name="txt_content">中央流行疫情指揮中心今(5)日表示，清明連假期間人潮移動頻繁，假期結束後民眾仍務必落實個人衛生，並與他人保持社交距離，避免出入人潮擁擠場所，若無法維持社交距離請配戴口罩。搭乘大眾運輸時請全程配戴口罩並配合體溫測量措施。若身體出現不適，請戴口罩儘速就醫，並告知醫師旅遊史、職業別、接觸史及是否群聚(TOCC)，以及時診斷通報。

指揮中心表示，為降低社區感染與傳播風險，防止未被發現感染源潛在傳染鏈威脅國內防疫安全，該中心除已訂定因應武漢肺炎疫情之公眾集會、大型營業場所等指引，並函請各縣市政府，落實轄內旅館、餐廳、大型營業場所及觀光旅遊景點等相關防疫措施，也請民眾務必配合，並與他人保持室內1.5公尺以上、室外1公尺以上之社交距離，或正確配戴口罩。搭乘大眾運輸時亦請全程配戴口罩，屢勸不聽者最高可處1萬5千元罰鍰。

指揮中心提醒，縣市政府未來對於人群聚集之觀光旅遊景點，應加派人力進行社交距離宣導，對於未保持社交距離者，加強勸導保持距離或配戴口罩，並提供備用口罩。</string>
    <string name="retrofit">Retrofit使用</string>
    <string name="dialog">Dialog使用</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="handler">Handler使用</string>
</resources>
