<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:textAllCaps="false"
        android:text="@string/intent"
        android:id="@+id/mBtnIntent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:textAllCaps="false"
        android:text="@string/fragment"
        android:id="@+id/mBtnFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:textAllCaps="false"
        android:text="@string/collapsing"
        android:id="@+id/mBtnCollapsing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:textAllCaps="false"
        android:text="@string/retrofit"
        android:id="@+id/mBtnRetrofit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>